# TXSQL-LLM

./: CMakeLists.txt  README.md  requirements.txt
.claude/: settings.local.json
docs/: IMPLEMENTATION_PLAN.md  PHASE1_GUIDE.md
heimdall/config/: heimdall_config.yaml
heimdall/core/llm_generator/: llm_client.h  prompt_builder.h
heimdall/core/optimizer_integration/: heimdall_optimizer.h
heimdall/core/validator/: logical_plan.h  semantic_validator.h
heimdall/utils/: llm_client.py  prompt_builder.py  semantic_validator.py
scripts/: benchmark_tpcds.py  phase1_setup.py  setup_tpcds.py  test_e2e.py
